fixing bugs + static queries on repository facade